--- a/web_src/modules/event/css/style.css
+++ b/web_src/modules/event/css/style.css
@@ -4,6 +4,20 @@
     margin: 20px;
 }
 
+.image-box {
+    max-width: 500px;
+    margin: 10px;
+    background-color: #fff;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    padding: 10px;
+    text-align: center;
+}
+
+.image-box img {
+    max-width: 100%;
+    height: auto;
+}
+
 form {
     background-color: #fff;
     padding: 20px;
